@@ -2,6 +2,10 @@ Upcoming:
 - All mob spawners were spawning pigs. This is fixed now
 - The Lost Cities events are back (useful for mods who want to do something special to LC worldgen)
 - Cellars at level -1 didn't correctly connect to adjacent corridors in Z direction
+- Fixed a problem with heightmaps being stored with bytes. But worldheight no longer fits in a byte. This could cause worldgen issues
+- Made borders below buildings and streets only go as deep as needed. This means that you will no longer have ugly borders going down into caves from buildings on top of it
+
+@TODO setBlocksFromPalette
 
 1.18-5.2.3:
 - It's now possible to use random block palettes for streets too
